django-registration with signup form

--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -19,6 +19,10 @@
 <input type="submit" value="LOG IN" class="btn btn-primary" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
+
+<p class="smalltxt"><a href="/registration/register/" title="Create your new project account">Need a new account?</a></p>
+<p class="smalltxt"><a href="/registration/password/reset" title="Reset Password">Forgot Password?</a></p>
+
 {% endblock %}
 
 
