s/MATCH/PHTC/ in registration templates

--- a/phtc/templates/registration/registration_complete.html
+++ b/phtc/templates/registration/registration_complete.html
@@ -3,10 +3,10 @@
 {% block content %}
 <h3>Thank you!</h3>
 
-<p>You've almost completed your MATCH account creation process.</p>
+<p>You've almost completed your PHTC account creation process.</p>
 
 <p>We've just sent you an email. Please check it and 
-click on the confirmation link to activate your MATCH account.</p>
+click on the confirmation link to activate your PHTC account.</p>
 
 {% endblock %}
 
