change logout link

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -42,7 +42,7 @@
           <a href="/accounts/login/?next=/" class="btn btn-success">login</a>
           {% else %}
           logged in as {{request.user.first_name}} {{request.user.last_name}}
-          <a href="/logout/" class="btn btn-inverse">logout</a>
+          <a href="/accounts/logout/" class="btn btn-inverse">logout</a>
           {% endif %}
 {% endblock %}
        </p>
