--- a/phtc/templates/admin/login.html
+++ b/phtc/templates/admin/login.html
@@ -1,47 +1,33 @@
-
-{% extends "admin/base_site.html" %}
-{% load i18n %}
-
-{% block stylesheet %}{% load adminmedia %}{% admin_media_prefix %}css/login.css{% endblock %}
-
-{% block bodyclass %}login{% endblock %}
-
-{% block content_title %}{% endblock %}
-
-{% block breadcrumbs %}{% endblock %}
-
+{% extends "base.html" %}
 {% block content %}
-{% if error_message %}
-<p class="errornote">{{ error_message }}</p>
-{% endif %}
-<div id="content-main">
-<form method="get" action="https://wind.columbia.edu/login">
+
+<h2>Choose a Login Option...</h2>
+
+<form method="get" action="https://wind.columbia.edu/login" class="well">
 <input type="hidden" name="service" value="cnmtl_full_np" />
-<input type="hidden" name="destination" value="http://{{ request.get_host }}/accounts/windlogin/?next=/admin/&this_is_the_login_form=1" />
-<p>If you have a Columbia UNI, you already have an account and can
-login through WIND with it</p>
-<input type="submit" value="Here" />
-</form>
-<p>otherwise: </p>
-
-<form action="{{ app_path }}" method="post" id="login-form">
-  <div class="form-row">
-    <label for="id_username">{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
-  </div>
-  <div class="form-row">
-    <label for="id_password">{% trans 'Password:' %}</label> <input type="password" name="password" id="id_password" />
-    <input type="hidden" name="this_is_the_login_form" value="1" />
-    <input type="hidden" name="post_data" value="{{ post_data }}" /> {#<span class="help">{% trans 'Have you <a href="/password_reset/">forgotten your password</a>?' %}</span>#}
-  </div>
-  <div class="submit-row">
-    <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}" />
-  </div>
+<input type="hidden" name="destination" value="http://{{ request.get_host }}/accounts/windlogin/?next=/admin/&amp;this_is_the_admin_form=1" />
+<p>If you have a Columbia University Network ID
+        (UNI)... </p><input type="submit" value="LOG IN" class="btn btn-primary"/></p>
 </form>
 
-<script type="text/javascript">
-document.getElementById('id_username').focus()
-</script>
-</div>
+<form method="post" action="." class="well">
+{% csrf_token %}
+<p>If you have a project account...</p>
+
+<label for="id_username">Username: {{ form.username }}</label>
+<label for="id_password">Password: {{ form.password }}</label>
+
+<input type="hidden" name="this_is_the_login_form" value="1" />
+<input type="hidden" name="post_data" value="{{ post_data }}" />
+
+<input type="submit" value="LOG IN" class="btn btn-primary" />
+<input type="hidden" name="next" value="/admin/" />
+</form>
+
+<p class="smalltxt"><a href="/registration/register/" title="Create your new project account">Need a new account?</a></p>
+<p class="smalltxt"><a href="/registration/password/reset/" title="Reset Password">Forgot Password?</a></p>
+
 {% endblock %}
+
 
 
