--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -97,7 +97,7 @@ $(function() {
 {% endblock %}
 
 
-{% block sidenav %}
+{% block sidebar %}
 	<!-- ###### Secondary Navigation ###### -->
 			<h3>Sections</h3>
 {% with "/edit" as menu_base %}
