--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -18,7 +18,7 @@
 
 {% block pagetitle %}<h1>{{section.label}}</h1>{% endblock %}
 
-{% block sidenav %}
+{% block sidebar %}
         <!-- ###### Secondary Navigation ###### -->
         {% if module.get_children %}
         <h3>Sections</h3>
@@ -76,3 +76,5 @@
 {% endif %}
 </ul>
 {% endblock %}
+
+
