only show edit link to admins

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -80,7 +80,9 @@
 
           <ul class="nav pull-right">
             {% block primarynavrightextra %}{% endblock %}
-						<li><a href="/edit{{section.get_absolute_url}}">Edit</a></li>
+						{% if request.user.is_superuser %}
+						<li><a id="test-edit-link" href="/edit{{section.get_absolute_url}}">Edit</a></li>
+						{% endif %}
           </ul>
         </div>
       </div>
