adding the beginning sof a profile edit page

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -41,7 +41,7 @@
           {% if request.user.is_anonymous %}
           <a href="/accounts/login/?next=/" class="btn btn-success">login</a>
           {% else %}
-          logged in as {{request.user.first_name}} {{request.user.last_name}}
+          logged in as {{request.user.username}} {{request.user.last_name}}
           <a href="/accounts/logout/" class="btn btn-inverse">logout</a>
           {% endif %}
 {% endblock %}
