show edit link on view page and view link on edit page

--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -78,3 +78,9 @@
 {% endblock %}
 
 
+
+{% block primarynavrightextra %}
+						{% if request.user.is_superuser %}
+						<li><a id="test-edit-link" href="/edit{{section.get_absolute_url}}">Edit</a></li>
+						{% endif %}
+{% endblock %}
