--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -257,3 +257,7 @@ method="post">
 </ul>
 
 {% endblock %}
+
+{% block primarynavrightextra %}
+						<li><a href="{{section.get_absolute_url}}">View</a></li>
+{% endblock %}
