adding in twitter tooltip and modal

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -41,8 +41,7 @@
           {% if request.user.is_anonymous %}
           <a href="/accounts/login/?next=/" class="btn btn-success">login</a>
           {% else %}
-          logged in as {{request.user.username}} {{request.user.last_name}}
-          <a href="/accounts/logout/" class="btn btn-inverse">logout</a>
+          logged in as <a rel="tooltip" title="view/edit profile" href="/profile/">{{request.user.username}} {{request.user.last_name}}</a> (<a href="/accounts/logout/">Log out</a>)
           {% endif %}
 {% endblock %}
        </p>
@@ -116,6 +115,13 @@
 {% endcompress %}
 
 {% block js %}{% endblock %}
-
+<script>
+//add tooltip 
+    jQuery("a[rel=tooltip]").hover(function(){
+      jQuery(this).tooltip({
+        placement: 'bottom'
+      });
+    })
+</script>
 </body>
 </html>
