--- a/phtc/templates/main/profile.html
+++ b/phtc/templates/main/profile.html
@@ -20,31 +20,57 @@
 	    	var valid = 0;
 	    	var password_valid = 0;
 	    	var p1 = jQuery('#id_password1').val();
-	    	var p2 = jQuery('#id_password2').val()
-	    	jQuery('.help-inline').remove()
+	    	var p2 = jQuery('#id_password2').val();
+	    	jQuery('.help-inline').remove();
 	    	jQuery('.controls').each(function(i){
 	    		if (jQuery(this).children().attr('id') === 'id_password1' || jQuery(this).children().attr('id') === 'id_password2'){
-	    			if (p1 === '' && p2 === ''  ){
-			    		password_valid  = 0;
-			    	}else if (p1 === p2){
-			    		password_valid = 0;
-			    	}else{
-			    		alert('passwords must match')
-			    		password_valid += 1;
-			    	}	
+	    			//skip password validation
 	    		}else{
-	    			jQuery(this).parent().removeClass('error')
+	    			jQuery(this).parent().removeClass('error');
 		    		if (jQuery(this).children().val() === 'Please Select' || jQuery(this).children().val() === ''){
-		    	 	 	jQuery(jQuery('.controls')[i]).append('<span class="help-inline">this field is required</span>').parent().addClass('error')
+		    	 	 	jQuery(jQuery('.controls')[i]).append('<span class="help-inline">this field is required</span>').parent().addClass('error');
 		    	 	 	valid +=1;
 		    	 	}
 	    		}//end if password
 	    	});//end each
 	    	
-	    	if (valid == 0 && password_valid == 0) {
+	    	//passwird validation
+	    	if (p1 === '' && p2 === ''  ){
+	    		password_valid  = 0;
+	    	}else if (p1 === p2){
+	    		password_valid = 0;
+	    	}else{
+	    		jQuery(".alert").show();
+	    		password_valid += 1;
+	    	}
+	    	if (valid === 0 && password_valid === 0) {
 	    		jQuery('#user_profile').submit();
-	    	} 
-    	
-		});
+	    	}
+		});//end .click
+		
+		//catch if the profile has been saved
+    		jQuery(document).ready(function(){
+    			var loc = document.location.href.split('profile').pop();
+    			if (typeof(loc) === 'string' && loc === "/?saved=true/"){
+    				jQuery('#myModal').modal('toggle')
+    			}
+    		})
     </script>
+
+    <!-- begin user feedback alerts-->
+    <div class="alert alert-block alert-error hide fade in" style="position:absolute; top:30%; left:35%; width:200px;">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+        <h4 class="alert-heading">Password Error</h4>
+        <p>The passwords must match.</p>
+    </div><!-- end .alert -->
+
+    <div class="modal hide" id="myModal">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal">×</button>
+	    <h3>Success!</h3>
+	  </div>
+	  <div class="modal-body">
+	    <p>Your user profile has been updated.</p>
+	  </div>
+	</div><!--end #myModal-->
 {% endblock %}
