--- a/phtc/templates/quizblock/quizblock.html
+++ b/phtc/templates/quizblock/quizblock.html
@@ -13,7 +13,7 @@
 
 {% if block.rhetorical %}
 	{% if block.feedback%}
-		<script src="site_media/js/feedback.js"></script>
+		<script src="/site_media/js/feedback.js"></script>
 	{% else %}
 		<script src="http://mt.ccnmtl.columbia.edu/pedialabs/js/quizshow.js" type="text/javascript" language="javascript"></script>
 	{% endif %}
