--- a/media/css/main.css
+++ b/media/css/main.css
@@ -65,3 +65,10 @@ body > .container {
 .casequestion form li{
 	cursor: pointer;
 }
+
+.big-modal {
+   width: 940px;
+   margin-left:-470px;
+   max-height: 600px;
+   margin-top: -300px;
+}
