--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load compress %}
 {% load bootstrap %}
+{% load render %}
 {% block title %}{{section.label}} (edit){% endblock %}
 {% block js %}
 
@@ -8,7 +9,6 @@
 
 {% compress css %}
 <style type="text/css">
-	#edit-blocks-tab .draggable { background-color: #ddd; }
 	.draghandle {float: left;}
 	#children-order-list {list-style-type: none; margin: 0; padding: 0;}
 	#children li { margin: 0 3px 3px 3px; padding: 0.4em;
@@ -42,7 +42,7 @@ var saveOrderOfChildren = function() {
 var saveOrderOfPageBlocks = function() {
     var url = "{% url reorder-pageblocks section.id %}?";
     var worktodo = 0;
-    $("#edit-blocks-tab>div").each(function(index,element) {
+    $("#edit-blocks-tab>div.block-dragger").each(function(index,element) {
       worktodo = 1;
       var id = $(element).attr('id').split("-")[1];
       url += "pageblock_id_" + index + "=" + id + ";";
@@ -70,7 +70,7 @@ $(function() {
   });
   $("#children-order-list").disableSelection();
   $("#edit-blocks-tab").sortable({
-    items : 'div'
+    items : 'div.block-dragger'
     ,axis: 'y'
     ,containment: 'parent'
     ,handle: '.draghandle'
@@ -122,31 +122,65 @@ $(function() {
 
 <div class="tab-content">
 
-<div id="edit-blocks-tab" class="tab-pane active"/>
+<div id="edit-blocks-tab" class="tab-pane active">
+	<p>Drag the <i class="icon-resize-vertical"></i> arrows to reorder pageblocks:</p>
+
 {% if section.pageblock_set.count %}
 {% for block in section.pageblock_set.all %}
-<div class="block-edit draggable" id="pageblock-{{block.id}}">
-<table width="100%" border="0"><tr><td><span title="drag to reorder pageblocks" class="draghandle ui-icon ui-icon-arrowthick-2-n-s"></span></td>
-<td align="right">
-<form action="{% url delete-pageblock block.id %}" method="post"
-			class="form-horizontal" >
-<input type="submit" value="delete block {{block.ordinality}}" class="btn btn-danger"/>
-</form></td></tr>
-<tr>
-<td>
-{% if block.block.exportable %}
-<a href="{% url export-pageblock-json block.id %}">export json</a>
-{% endif %}
-</td>
-<td>
+<div class="row-fluid block-dragger" id="pageblock-{{block.id}}">
+
+       <div class="span1 draghandle">
+               <i class="icon-resize-vertical"></i>
+       </div>
+
+       <div class="span2">
+               <b><a data-toggle="modal" href="#edit-pageblock-{{block.id}}">{{block.block.display_name}}</a></b>
+       </div>
+
+       <div class="span6">
+               <a data-toggle="modal" href="#edit-pageblock-{{block.id}}">{{block.label}}</a>
+{% rendersummary block %}
+       </div>
+
+       <div class="span3">
+               <div class="btn-group">
+                       <a data-toggle="modal" class="btn btn-mini"
+                        href="#edit-pageblock-{{block.id}}">
+                       <i class="icon-edit"></i>
+                       edit</a>
+
+               <a href="{% url delete-pageblock block.id %}" class="btn
+               btn-danger btn-mini"><i class="icon-trash icon-white"></i> delete</a>
+
+               {% if block.block.exportable %}
+               <a class="btn btn-mini"
+                        rel="tooltip" title="Download JSON dump of this block"
+                        id="export-{{block.id}}"
+                        href="{% url export-pageblock-json block.id %}"><i class="icon-download"></i> export</a>
+
+               {% endif %}
+               </div>
+       </div>
+
+
+</div>
+{% endfor %}
+
+
+{% for block in section.pageblock_set.all %}
+<div class="modal big-modal hide block-edit" id="edit-pageblock-{{block.id}}">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>Edit {{block.block.display_name}}</h3>
+  </div>
+  <div class="modal-body">
+
 {% if block.block.importable %}
 <a href="{% url import-pageblock-json block.id %}">import json</a>
 {% endif %}
-</td>
-</tr>
-</table>
+
 <form action="{% url edit-pageblock block.id %}" method="post"
-class="well form-horizontal"
+class=""
 {% if block.edit_form.is_multipart %}enctype="multipart/form-data"{% endif %}>
 
 {{ block.default_edit_form|bootstrap }}
@@ -156,8 +190,14 @@ class="well form-horizontal"
 <div>{{ ef.alt_text|safe }}</div>
 {% endif %}
 {% endwith %}
+</div>
 
-<input type="submit" value="save" class="btn btn-primary"/>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+               <input type="submit" value="Save" 
+                        class="btn btn-primary" />
+</div>
+
 </form>
 </div>
 {% endfor %}
@@ -213,7 +253,7 @@ enctype="multipart/form-data"
 {% endif %}
 method="post">
 
-<div class="modal hide" id="add-block-{{forloop.counter}}">
+<div class="modal big-modal hide" id="add-block-{{forloop.counter}}">
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3>Add {{blocktype.display_name}}</h3>
