--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -10,7 +10,7 @@
         (UNI)... </p><input type="submit" value="LOG IN" class="btn btn-primary"/></p>
 </form>
 
-<form method="post" action="." class="well">
+<form method="post" action="./?next=/dashboard/" class="well">
 {% csrf_token %}
 <p>If you have a project account...</p>
 
