--- a/phtc/templates/quizblock/question.html
+++ b/phtc/templates/quizblock/question.html
@@ -13,9 +13,14 @@
       {{question.text|markdown}}
       {% if question.answerable %}
         {% if block.rhetorical %}<form id="form-{{question.id}}" method="post">{% endif %}
+        {% if block.matching %}<form id="matching-form-{{question.id}}">{% endif %}
 
 	{% if question.is_single_choice %}
-  	  {% include 'quizblock/single_choice.html' %}
+    {% if block.matching %}
+      {% include 'quizblock/single_choice_matching.html' %}
+    {% else %}
+      {% include 'quizblock/single_choice.html' %}
+    {% endif %}
 	{% endif %}
 
   {% if question.is_single_choice_feedback %}
@@ -32,6 +37,9 @@
 
         {% if block.rhetorical %}
           </form>
+        {% endif %}
+        {% if block.matching %}
+          </form><!-- end #matching-form-{{question.id}}-->
         {% endif %}
       {% else %}
         {% if question.is_short_text %}
