--- a/phtc/templates/quizblock/quizblock.html
+++ b/phtc/templates/quizblock/quizblock.html
@@ -9,14 +9,16 @@
 {% for question in block.question_set.all %}
   {% include 'quizblock/question.html' %}
 {% endfor %}
-
-
-{% if block.rhetorical %}
-	{% if block.feedback%}
-		<script src="/site_media/js/feedback.js"></script>
-	{% else %}
-		<script src="http://mt.ccnmtl.columbia.edu/pedialabs/js/quizshow.js" type="text/javascript" language="javascript"></script>
+	{% if block.matching %}
+		<script src="/site_media/js/matching.js"></script>
 	{% endif %}
-{% endif %}	
+
+	{% if block.rhetorical %}
+		{% if block.feedback%}
+			<script src="/site_media/js/feedback.js"></script>
+		{% else %}
+			<script src="http://mt.ccnmtl.columbia.edu/pedialabs/js/quizshow.js" type="text/javascript" language="javascript"></script>
+		{% endif %}
+	{% endif %}	
 
 {% endif %}
