--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -3,8 +3,14 @@
 
 {% block content %}
 
-<h1>Dashboard</h1>
+<style type="text/css">
 
+.module-info-popover, .section-info-popover{
+	cursor: pointer;
+}
+</style>
+
+<h1>Dashboard</h1>
 
 {% for module in root.get_children %}
 <div class="row-fluid">
@@ -24,33 +30,58 @@
 		{% endif %}
 
 </div>
-	<div class="span1"><img src="/site_media/img/status_info.png"></div>
+	<div data-content="{{ status.section.dashboard_info}}" data-original-title="Module Info" class="module-info-popover span1"><img src="/site_media/img/status_info.png"></div>
 </div>
 
-{% for section in module.get_children %}
-<div class="row-fluid">
-	<div class="span1"></div>
-	<div class="span4">
-		<a href="{{section.get_absolute_url}}">{{section.label}}</a>
+	{% for section in module.get_children %}
+	<div class="row-fluid">
+		<div class="span1"></div>
+		<div class="span4">
+			<a href="{{section.get_absolute_url}}">{{section.label}}</a>
+		</div>
+		<div class="span1">
+			{% get_user_section_status request.user section as status %}
+			{% ifequal status.status "complete" %}
+			<img src="/site_media/img/status_completed.png">
+			{% endifequal %}
+			{% ifequal status.status "incomplete" %}
+			<img src="/site_media/img/status_inprogress.png">
+			{% endifequal %}
+			{% if not status %}
+			<img src="/site_media/img/status_uninitiated.png">
+			{% endif %}
 	</div>
-	<div class="span1">
-		{% get_user_section_status request.user section as status %}
-		{% ifequal status.status "complete" %}
-		<img src="/site_media/img/status_completed.png">
-		{% endifequal %}
-		{% ifequal status.status "incomplete" %}
-		<img src="/site_media/img/status_inprogress.png">
-		{% endifequal %}
-		{% if not status %}
-		<img src="/site_media/img/status_uninitiated.png">
-		{% endif %}
-</div>
-	<div class="span1"><img src="/site_media/img/status_info.png"></div>
-
-</div>
-{% endfor %}
+		<div data-content="{{ section.dashboard_info}}" data-original-title="Section Info" class="section-info-popover span1"><img src="/site_media/img/status_info.png"></div>
+	</div>
+	{% endfor %}
 
 {% endfor %}
+<script>
+jQuery(document).ready(function($){
+		$(".module-info-popover").popover({
+        	offset: 10,
+        	trigger:'manual'
 
+        }).click(function(){
+             $(this).popover('show')
+
+        }).mouseleave(function(){
+        	$(this).popover('hide')
+        });
+
+		$(".section-info-popover").popover({
+        	offset: 10,
+        	trigger:'manual'
+
+        }).click(function(){
+             $(this).popover('show')
+
+        }).mouseleave(function(){
+        	$(this).popover('hide')
+        });
+
+
+});
+</script>
 
 {% endblock %}
