implemented section status and 3 tier dashboard

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -121,6 +121,20 @@
     jQuery("span.user_profile").tooltip({
       placement: 'bottom'
     });
+//get URL params 
+(function(){
+  function getUrlVars() {
+      var vars = {};
+      var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+          vars[key] = value;
+      });
+      return vars;
+  }//end getUrlVars
+  if (getUrlVars()['incomplete'] ){
+      var message = "You must complete the previous part in order to continue. \n\n We redirected you back to the dashboard so you can check your status and remeber where you left off."
+      alert(message);
+  }
+})();//end anonymous function wrapper
 </script>
 </body>
 </html>
