--- a/phtc/templates/main/menu.html
+++ b/phtc/templates/main/menu.html
@@ -16,15 +16,18 @@
   {% else %}
   <li class="menu-{{s.depth}}">
     {% ifnotequal s.id section.id %}
-    {% for v in is_visited %}
-      {% ifequal s.id v.section_id %}
-          {% ifequal v.status incomplete %}
-          {% else %}
-          <a href="{{menu_base}}{{s.get_absolute_url}}">
+      {% if request.user.is_staff %}
+        <a href="{{menu_base}}{{s.get_absolute_url}}">
+        {% else %}
+        {% for v in is_visited %}
+          {% ifequal s.id v.section_id %}
+              {% ifequal v.status incomplete %}
+              {% else %}
+              <a href="{{menu_base}}{{s.get_absolute_url}}">
+              {% endifequal %}
           {% endifequal %}
-      {% endifequal %}
-    {% endfor %}
-    
+        {% endfor %}
+      {% endif %}
     {% else %}
        <b>
     {% endifnotequal %}
