--- a/phtc/templates/main/menu.html
+++ b/phtc/templates/main/menu.html
@@ -4,9 +4,9 @@
 {% for s in module.get_descendants %}  
 {% if s.needs_submit %}
   {% if s.is_submitted  %}
-  <h4>Yep</h4>
+  <h4>Ye - s.is_submitted  </h4>
   {% else %}
-  <h4>nope</h4>
+  <h4>nope - s.is_submitted </h4>
   {% endif %}
 {% endif %}
 
